# MyPyDrive

./: .gitignore  Drive.py  LICENCE.txt  README.md  customobjs.py  gdrive.py  google_ugly_upload.py  mimetypesv3.toml  pyproject.toml  quickstart.py  quicktest.py
mypydrive/: __init__.py  __main__.py
mypydrive/assets/: mimetypes.toml
mypydrive/misc/: automated_access.py  first_upload.py  quicktest.py
mypydrive/utils/: Drive.py  customobjs.py  gdrive.py
