[tool.poetry]
name = "MyPyDrive"
version = "0.1.0"
description = "Simple and effective way to interact with Google Drive via Python."
authors = ["Gustavo Magaña López"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydrive = "^1.3.1"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
