[tool.poetry]
name = "MyPyDrive"
version = "0.1.6"
description = "Simple and effective way to interact with Google Drive via Python."
authors = ["Gustavo Magaña López"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pydrive = "^1.3.1"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"

[tool.poetry.scripts]
drive = "mypydrive.utils.gdrive:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
